add literal patterns for static access